programs/solana/packages/solana-ibc-macros/tests/ui/wrong_param_count.rs
use solana_ibc_macros::ibc_app;

#[ibc_app]
pub mod my_app {
    pub fn on_recv_packet(ctx: Ctx, msg: OnRecvPacketMsg, extra: u32) -> Result<Vec<u8>> {
        Ok(vec![])
    }

    pub fn on_acknowledgement_packet(ctx: Ctx, msg: OnAcknowledgementPacketMsg) -> Result<()> {
        Ok(())
    }

    pub fn on_timeout_packet(ctx: Ctx, msg: OnTimeoutPacketMsg) -> Result<()> {
        Ok(())
    }
}

fn main() {}
